--- a/DAA/3.Analysis_part-2.md
+++ b/DAA/3.Analysis_part-2.md
@@ -48,13 +48,13 @@ Recurrences are equations or inequalities that describe a function in terms of i
 The **substitution method** involves guessing the form of the solution and then using mathematical induction to prove the guess correct.
 
 **Example:**
-Solve the recurrence \( T(n) = 2T(n/2) + n \).
-1. **Guess**: \( T(n) = O(n \log n) \).
-2. **Induction Hypothesis**: Assume \( T(k) \leq c k \log k \) for all \( k < n \).
+Solve the recurrence $$ T(n) = 2T(n/2) + n $$.
+1. **Guess**: $$ T(n) = O(n \log n) $$.
+2. **Induction Hypothesis**: Assume $$ T(k) \leq c k \log k $$ for all $$ k < n $$.
 3. **Substitution**:
-   \[
+   $$
    T(n) = 2T(n/2) + n \leq 2(c(n/2) \log(n/2)) + n = cn \log(n/2) + n = cn \log n - cn + n = cn \log n - cn + n \leq cn \log n.
-   \]
+   $$
 This confirms the guess.
 
 #### Recursion Tree Method
@@ -62,36 +62,36 @@ This confirms the guess.
 The **recursion tree method** converts the recurrence into a tree where each node represents a sub-problem and its cost.
 
 **Example:**
-Solve the recurrence \( T(n) = 2T(n/2) + n \).
+Solve the recurrence $$ T(n) = 2T(n/2) + n $$.
 1. Draw the tree:
-   - Root: \( T(n) \).
-   - Level 1: \( 2T(n/2) + n \).
-   - Level 2: \( 4T(n/4) + 2n \).
+   - Root: $$ T(n) $$.
+   - Level 1: $$ 2T(n/2) + n $$.
+   - Level 2: $$ 4T(n/4) + 2n $$.
    - Continue until the base case.
 2. Sum the costs at each level:
-   - Level 0: \( n \).
-   - Level 1: \( n \).
-   - Level 2: \( n \).
-   - Total: \( \log n \) levels, each costing \( n \) => \( O(n \log n) \).
+   - Level 0: $$ n $$.
+   - Level 1: $$ n $$.
+   - Level 2: $$ n $$.
+   - Total: $$ \log n $$ levels, each costing $$ n $$ => $$ O(n \log n) $$.
 
 #### Master Method
 
 The **master method** provides a straightforward way to solve recurrences of the form:
 \[ T(n) = aT(n/b) + f(n) \]
-where \( a \geq 1 \) and \( b > 1 \).
+where $$ a \geq 1 $$ and $$ b > 1 $$.
 
 Three cases:
 
-1. If \( f(n) = O(n^c) \) where \( c < \log_b a \), then \( T(n) = O(n^{\log_b a}) \).
-2. If \( f(n) = O(n^c) \) where \( c = \log_b a \), then \( T(n) = O(n^c \log n) \).
-3. If \( f(n) = O(n^c) \) where \( c > \log_b a \), then \( T(n) = O(f(n)) \).
+1. If $$ f(n) = O(n^c) $$ where $$ c < \log_b a $$, then $$ T(n) = O(n^{\log_b a}) $$.
+2. If $$ f(n) = O(n^c) $$ where $$ c = \log_b a $$, then $$ T(n) = O(n^c \log n) $$.
+3. If $$ f(n) = O(n^c) $$ where $$ c > \log_b a $$, then $$ T(n) = O(f(n)) $$.
 
 **Example:**
-Solve the recurrence \( T(n) = 2T(n/2) + n \).
-- Here, \( a = 2 \), \( b = 2 \), and \( f(n) = n \).
-- \( \log_b a = \log_2 2 = 1 \).
-- \( f(n) = n = O(n^1) \), which matches case 2.
-- Thus, \( T(n) = O(n \log n) \).
+Solve the recurrence $$ T(n) = 2T(n/2) + n $$.
+- Here, $$ a = 2 $$, $$ b = 2 $$, and $$ f(n) = n $$.
+- $$ \log_b a = \log_2 2 = 1 .
+- $$ f(n) = n = O(n^1) $$, which matches case 2.
+- Thus, $$ T(n) = O(n \log n) $$.
 
 ### Summary
 
@@ -101,6 +101,6 @@ Solve the recurrence \( T(n) = 2T(n/2) + n \).
 - **Recurrences**: Used to analyze recursive algorithms.
   - **Substitution Method**: Guess and prove.
   - **Recursion Tree Method**: Visualize and sum costs.
-  - **Master Method**: Apply to recurrences of the form \( T(n) = aT(n/b) + f(n) \).
+  - **Master Method**: Apply to recurrences of the form $$ T(n) = aT(n/b) + f(n) $$.
 
 These concepts and methods are fundamental in analyzing and proving the efficiency and correctness of algorithms.
